; ModuleID = '/home/carl/AnghaBench/linux/net/vmw_vsock/extr_virtio_transport_common.c_virtio_transport_send_credit_update.c'
source_filename = "/home/carl/AnghaBench/linux/net/vmw_vsock/extr_virtio_transport_common.c_virtio_transport_send_credit_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vsock_sock = type { i32 }
%struct.virtio_vsock_hdr = type { i32 }
%struct.virtio_vsock_pkt_info = type { i32, %struct.vsock_sock*, i32 }

@VIRTIO_VSOCK_OP_CREDIT_UPDATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vsock_sock*, i32, %struct.virtio_vsock_hdr*)* @virtio_transport_send_credit_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @virtio_transport_send_credit_update(%struct.vsock_sock* %0, i32 %1, %struct.virtio_vsock_hdr* %2) #0 {
  %4 = alloca %struct.vsock_sock*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.virtio_vsock_hdr*, align 8
  %7 = alloca %struct.virtio_vsock_pkt_info, align 8
  store %struct.vsock_sock* %0, %struct.vsock_sock** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.virtio_vsock_hdr* %2, %struct.virtio_vsock_hdr** %6, align 8
  %8 = getelementptr inbounds %struct.virtio_vsock_pkt_info, %struct.virtio_vsock_pkt_info* %7, i32 0, i32 0
  %9 = load i32, i32* %5, align 4
  store i32 %9, i32* %8, align 8
  %10 = getelementptr inbounds %struct.virtio_vsock_pkt_info, %struct.virtio_vsock_pkt_info* %7, i32 0, i32 1
  %11 = load %struct.vsock_sock*, %struct.vsock_sock** %4, align 8
  store %struct.vsock_sock* %11, %struct.vsock_sock** %10, align 8
  %12 = getelementptr inbounds %struct.virtio_vsock_pkt_info, %struct.virtio_vsock_pkt_info* %7, i32 0, i32 2
  %13 = load i32, i32* @VIRTIO_VSOCK_OP_CREDIT_UPDATE, align 4
  store i32 %13, i32* %12, align 8
  %14 = load %struct.vsock_sock*, %struct.vsock_sock** %4, align 8
  %15 = call i32 @virtio_transport_send_pkt_info(%struct.vsock_sock* %14, %struct.virtio_vsock_pkt_info* %7)
  ret i32 %15
}

declare dso_local i32 @virtio_transport_send_pkt_info(%struct.vsock_sock*, %struct.virtio_vsock_pkt_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
